--- a/extension/popup.html
+++ b/extension/popup.html
@@ -4,13 +4,15 @@
     <style>
       button {
         height: 30px;
-        width: 30px;
+        justify-content: center;
+        margin:auto;
         outline: none;
       }
     </style>
   </head>
   <body>
-    <button id="changeColor"></button>
+    <input type="text" id="" name="Enter in your userid">
+    <button id="changeColor">Login</button>
     <script src="popup.js"></script>
   </body>
 </html>
