--- a/extension/popup.html
+++ b/extension/popup.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <style>
+      body {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
       button {
         height: 30px;
         justify-content: center;
@@ -11,7 +16,9 @@
     </style>
   </head>
   <body>
-    <input type="text" id="" name="Enter in your userid">
+    <h2>Welcome to ReQuiz!</h2>
+    <p>Type your email and click save to generate your questions!</p>
+    <input type="text" id="userid" name="Enter in your userid">
     <button id="changeColor">Login</button>
     <script src="popup.js"></script>
   </body>
