Console debugging for extension

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -10,7 +10,7 @@
       button {
         height: 30px;
         justify-content: center;
-        margin:auto;
+        margin: auto;
         outline: none;
       }
     </style>
@@ -18,7 +18,7 @@
   <body>
     <h2>Welcome to ReQuiz!</h2>
     <p>Type your email and click save to generate your questions!</p>
-    <input type="text" id="userid" name="Enter in your userid">
+    <input type="text" id="userid" name="Enter in your userid" />
     <button id="changeColor">Login</button>
     <script src="popup.js"></script>
   </body>
